<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@mipmap/merc"
            android:id="@+id/obrazek"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.3"/>
    <TextView
            android:text="@string/mass_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mass_label" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mass_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mass_label" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_height="wrap_content" android:maxLength="3"
            android:maxLines="1"/>
    <Button
            android:text="@string/count_bmi"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:id="@+id/countBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/height_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/height_label" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mass_edit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/height_edit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/height_label" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:maxLength="3" android:maxLines="1"/>
    <TextView
            android:text="@string/your_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_label" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/height_edit"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/infoBtn"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/countBtn"/>
    <ImageButton
            android:src="@drawable/ic_info_black_24dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="0dp"
            android:id="@+id/infoBtn"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.473" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/result_label"
            app:layout_constraintBottom_toBottomOf="@+id/result_label" app:layout_constraintStart_toEndOf="@+id/result_label"
            app:layout_constraintHorizontal_bias="0.5" android:cropToPadding="true" android:adjustViewBounds="true"
            android:scaleType="fitXY" android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_label" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/countBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/result_label" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>