<resources>
    <string name="app_name">BMI</string>

    <string name="imperial">imperial</string>
    <string name="about">about</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="history">history</string>

    <string name="mass_kg">Mass [Kg]</string>
    <string name="height_cm">Height [cm]</string>
    <string name="mass_lb">Mass [Lb]</string>
    <string name="height_in">Height [In]</string>

    <string name="count_bmi">Count BMI</string>
    <string name="your_bmi">Your BMI:</string>

    <string name="result_key">result</string>

    <string name="underweight">UNDERWEIGHT</string>
    <string name="healthy">HEALTHY</string>
    <string name="overweight">OVERWEIGHT</string>
    <string name="obesity">OBESITY</string>

    <string name="category_key">category</string>
    <string name="gadanie">Losowe informacje o mnie. Generalnie tam na zdjęciu to jestem ja jakby co.</string>
    <string name="gadanie2">Sam bym chciał, żeby ta aplikacja była fajniejsza, ale zamiast ją pisać to śpiewałem.</string>

    <string name="podaj_dane">Podaj poprawne dane!</string>
    <string name="healthy_info">healthy Zdrowo, przykładowy tekst</string>
    <string name="underweight_info">Under. Nie tak zdrowo</string>
    <string name="overweight_info">over. Trochę za dużo, ale nie ma dramatu</string>
    <string name="obesity_info">obese :(</string>
    <string name="brak_wyniku_bmi">Nie obliczono bmi</string>

</resources>
